# renode-systemc-examples

./: .ci.yml  .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  west.yml
.github/workflows/: test-examples.yml  test.yml
cmake/: common-native.cmake  common.cmake  msvc.cmake  renode.cmake  systemc.cmake
examples/: all_examples.yaml  all_examples_windows.yaml  native_examples.yaml
examples-native/: all_examples.yaml  all_examples_windows.yaml
examples-native/dmi-native/: CMakeLists.txt  README.md  dmi-native.robot
examples-native/dmi-native/renode/: dmi_test.repl  dmi_test.resc
examples-native/gpio-connection-native/: CMakeLists.txt  gpio-connection-native.robot
examples-native/gpio-connection-native/renode/: gpio-connection.repl  gpio-connection.resc
examples-native/interrupts-native/: CMakeLists.txt
examples-native/interrupts-native/renode/: interrupts.repl  (+1 more)
examples-native/timesync-native/: CMakeLists.txt  timesync-native.robot
examples-native/tlm-non-blocking-native/: CMakeLists.txt  tlm-non-blocking.robot
examples/cortex-m-signals/: CMakeLists.txt  README.md  cortex-m-signals.robot
examples/direct-connection/: CMakeLists.txt  README.md  direct-connection.robot
examples/dma/: CMakeLists.txt  README.md  dma.robot
examples/dmi/: CMakeLists.txt  README.md  dmi.robot
examples/gpio-connection/: CMakeLists.txt  README.md  gpio-connection.robot
examples/interrupts/: CMakeLists.txt  README.md  interrupts.robot
examples/lt/: CMakeLists.txt  README.md  lt.robot
examples/multiple-peripherals/: CMakeLists.txt  README.md  multiple-peripherals.robot
examples/timesync/: CMakeLists.txt  README.md
examples/timesync-native/: CMakeLists.txt
examples/timesync-native/renode/: timesync.repl  timesync.resc
examples/timesync-native/systemc/src/: main.cpp  timekeeper.cpp
examples/timesync-native/zephyr/: CMakeLists.txt
examples/timesync-native/zephyr/src/: main.c
examples/tlm-non-blocking/: CMakeLists.txt  README.md  tlm-non-blocking.robot
examples/transaction-delay/: CMakeLists.txt  README.md  transaction-delay.robot
scripts/: archive.sh  build_zephyr_bins.sh  fetch_zephyr_sdk.sh  install_windows_packages.sh  typeperf.gnuplot  windows_packages.config
tests/: all_tests.yaml
tests/test-synchronization/: CMakeLists.txt  synchronization.robot  test-synchronization.robot
(+114 files in other folders)
